_k8s/overlays/dev/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demoapp
spec:
  hostnames:
    - dev.demoapp.DOMAIN
